# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml  requiriments.txt  test.py
display/: __init__.py  ascii_render.py
maze_config/: __init__.py  constants.py  parser.py  validator.py
maze_display/: __init__.py  ascii_render.py  constants.py
maze_gen/: README.md  __init__.py  constants.py  generator.py  models.py  solver.py
maze_ui/: __init__.py  actions.py  animations.py  constants.py  menu.py  state.py
mazegen/: __init__.py  generator.py  models.py  solver.py
ui/: __init__.py  actions.py  menu.py  state.py
