[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maze_gen"
version = "1.0.0"
description = "Reusable maze generator module (A-Maze-ing)"
authors = [
    {name = "lmuler-f"},
    {name = "eamaral-"}
]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["maze_gen*", "maze_display*", "maze_ui*", "maze_config*"]