[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator module (A-Maze-ing — 42)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "lmuler-f"},
    {name = "eamaral-"}
]
license = "MIT"

[tool.setuptools]
packages = ["maze_gen"]